@@ -1,3 +1,8 @@
+2006-04-22  Sergey Udaltsov <svu@gnome.org>
+
+	gnome-keyboard-properties-xkblt.c:
+	Layout Preview window saves/restores geometry
+
 2006-03-02  Sergey Udaltsov <svu@gnome.org>
 
 	Fixes #336396
